# matt-conduit

./: .gitignore  README.md
be/: .env  Cargo.toml
be/migrations/: 001_create_users_table.sql
be/src/: lib.rs  main.rs  router.rs  state.rs
be/src/config/: mod.rs
be/src/dao/: mod.rs  user.rs  user_dao.rs
be/src/dto/: common.rs  mod.rs  user.rs  user_dto.rs
be/src/entity/: mod.rs  user.rs  user_entity.rs
be/src/error/: common.rs  user.rs
be/src/handler/: user.rs  user_handler.rs
be/src/marco/: log.rs  mod.rs  redacted_debug.rs
be/src/observability/: http.rs  mod.rs  tracing.rs
be/src/service/: user.rs
be/src/utils/: crypto.rs  mod.rs
